# lockey

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CMakeLists.txt  NAME  PROJECT  README.md  devbox.json  xmake.lua
docs/: VERIFY_PROTOCOL.md  X509_USER_GUIDE.md
examples/: cert_generate_ca.cpp  cert_generate_self_signed.cpp  cert_parse_and_print.cpp  cert_sign_csr.cpp  cert_verify_chain.cpp  csr_generate.cpp  enterprise.cpp  main.cpp  simple_verify_client.cpp  simple_verify_server.cpp  test_comprehensive.cpp  test_lockey.cpp  trust_store_usage.cpp  verify_grpc.cpp  verify_netpipe.cpp
include/keylock/: compat_constants.hpp  keylock.hpp
include/keylock/cert/: asn1_common.hpp  asn1_utils.hpp  asn1_writer.hpp  builder.hpp  certificate.hpp  crl.hpp  crl_builder.hpp  csr.hpp  csr_builder.hpp  distinguished_name.hpp  key_exchange.hpp  key_utils.hpp  oid_registry.hpp  parser.hpp  parser_utils.hpp  pem.hpp  trust_store.hpp
include/keylock/cert/verify/: client.hpp  direct_transport.hpp  server.hpp  transport.hpp  wire_format.hpp
include/keylock/crypto/: common.hpp  context.hpp
include/keylock/crypto/aead_aes256gcm/: aead.hpp  aes.hpp  gcm.hpp
include/keylock/crypto/aead_chacha20poly1305_ietf/: aead.hpp
include/keylock/crypto/aead_xchacha20poly1305_ietf/: aead.hpp
include/keylock/crypto/aes/: aes.hpp
include/keylock/crypto/box_seal_x25519/: kdf.hpp  seal.hpp  x25519.hpp
include/keylock/crypto/chacha20/: chacha20.hpp
include/keylock/crypto/constant_time/: verify.hpp  wipe.hpp
include/keylock/crypto/curve25519/: common.hpp  field.hpp  scalar.hpp
include/keylock/crypto/elligator/: elligator2.hpp
include/keylock/crypto/poly1305/: poly1305.hpp
include/keylock/crypto/rng/: randombytes.hpp
include/keylock/crypto/secretbox_xsalsa20poly1305/: secretbox.hpp
include/keylock/crypto/sign_ed25519/: ed25519.hpp
include/keylock/hash/: algorithms.hpp  context.hpp
include/keylock/hash/blake2b/: blake2b.hpp
include/keylock/hash/blake2s/: blake2s.hpp
include/keylock/hash/blake2x/: blake2x.hpp
include/keylock/hash/generichash/: blake2b_keyed.hpp
include/keylock/hash/hkdf/: hkdf_sha256.hpp  hkdf_sha512.hpp
include/keylock/hash/hmac/: hmac_blake2b.hpp  hmac_sha256.hpp  hmac_sha512.hpp
include/keylock/hash/kmac/: kmac.hpp
include/keylock/hash/legacy/: sm3.hpp  streebog.hpp  whirlpool.hpp
include/keylock/hash/sha256/: sha256.hpp
include/keylock/hash/sha3/: sha3.hpp
include/keylock/hash/sha512/: sha512.hpp
include/keylock/hash/shake/: shake.hpp
include/keylock/hash/skein/: skein.hpp
include/keylock/io/: files.hpp  key_exchange.hpp
include/keylock/kdf/argon2/: argon2.hpp
include/keylock/utils/: common.hpp  sodium_utils.hpp
include/keylock/verify/: client.hpp  direct_transport.hpp  server.hpp  wire_format.hpp
include/lockey/cert/: asn1_common.hpp  asn1_writer.hpp  builder.hpp  certificate.hpp  crl.hpp  crl_builder.hpp  csr.hpp  csr_builder.hpp  key_utils.hpp  parser_utils.hpp
include/lockey/verify/: client.hpp  server.hpp
misc/: VERIFY_PROTOCOL.md  X509_USER_GUIDE.md
src/keylock/: keylock.cpp
src/keylock/cert/: asn1_utils.cpp  asn1_writer.cpp  builder.cpp  certificate.cpp  crl.cpp  crl_builder.cpp  csr.cpp  csr_builder.cpp  distinguished_name.cpp  key_utils.cpp  oid_registry.cpp  parser.cpp  parser_utils.cpp  pem.cpp  trust_store.cpp
src/keylock/crypto/: context.cpp
src/keylock/hash/: algorithms.cpp
src/keylock/io/: files.cpp  key_exchange.cpp
src/keylock/utils/: common.cpp  sodium_utils.cpp
src/keylock/verify/: client.cpp  direct_transport.cpp  server.cpp  wire_format.cpp
src/lockey/cert/: asn1_writer.cpp  builder.cpp  certificate.cpp  crl.cpp  crl_builder.cpp  csr.cpp  csr_builder.cpp  distinguished_name.cpp  key_utils.cpp  oid_registry.cpp  parser.cpp  parser_utils.cpp
src/lockey/utils/: common.cpp
src/lockey/verify/: client.cpp  server.cpp
test/: cert_test_helpers.hpp  test_aead_aes256gcm.cpp  test_aead_chacha20poly1305.cpp  test_aead_xchacha20poly1305.cpp  test_aes_modes.cpp  test_argon2.cpp  test_asymmetric_encryption.cpp  test_blake2b.cpp  test_blake2s.cpp  test_blake2x.cpp  test_cert_asn1.cpp  test_cert_chain.cpp  test_cert_crl.cpp  test_cert_csr.cpp  test_cert_enterprise_extensions.cpp  test_cert_extended_key_usage.cpp  test_cert_extensions.cpp  test_cert_generation.cpp  test_cert_integration.cpp  test_cert_keys.cpp  test_cert_oid.cpp  test_cert_parser.cpp  test_cert_pem.cpp  test_cert_trust_store.cpp  test_cert_utils.cpp  test_cert_validation.cpp  test_cert_vectors.cpp  test_chacha20.cpp  test_constant_time.cpp  test_construction.cpp  test_ed25519.cpp  test_elligator.cpp  test_generichash.cpp  test_hashing.cpp  test_hkdf.cpp  test_hkdf_sha256.cpp  test_hkdf_sha512.cpp  test_hmac.cpp  test_hmac_sha256.cpp  test_hmac_sha512.cpp  (+26 more)
